fix(widgets): increase canvas size slightly on smaller screens

--- a/src/styles/components/widgets/__uniWidget.sass
+++ b/src/styles/components/widgets/__uniWidget.sass
@@ -21,7 +21,7 @@ uni-widget-canvas
         border: 2px solid $uni-color-bad
 
 .widget-canvas
-    width: 90%
+    width: 92.5%
     max-width: 1500px
     margin: 0 auto
     padding: 0
